--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 
         <canvas id="playcanvas" width="960" height="480">
         </canvas>
-        <p>Player.walk();</p>
+        <p class="help">A játékos léptetéséhez add ki a <code>Player.walk();</code> utasítást.</p>
         <textarea id="code"></textarea>
-        <button onclick="parse($('#code').val())">RUN</button>
+        <button onclick="parse($('#code').val())" class="btn">RUN</button>
 
     </div>
 
