--- a/index.html
+++ b/index.html
@@ -18,13 +18,14 @@
         <canvas id="playcanvas" width="960" height="480">
         </canvas>
         <p class="help">A játékos léptetéséhez add ki a <code>Player.walk();</code> utasítást.</p>
+        <div id="console-log-div"></div>
         <textarea id="code"></textarea>
         <button onclick="parse($('#code').val())" class="btn">RUN</button>
 
+        <script src="assets/js/console.js"></script>
+
     </div>
 
-    <script>
-    </script>
     <script src="control/main.js"></script>
 
 </body>
