--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <script src="assets/js/jquery-3.2.1.min.js"></script>
     <script src="models/player.js"></script>
     <script src="models/enemy.js"></script>
-    <script src="models/coins.js"></script>
+    <script src="models/ruby.js"></script>
     <script src="models/map.js"></script>
     <script src="views/display.js"></script>
     <link rel="stylesheet" href="assets/css/main.css">
