--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <div id="console-log-div"></div>
         <textarea id="code"></textarea>
         <button onclick="parse($('#code').val())" class="btn">RUN</button>
+        <button onclick="restart()" class="btn">RESTART</button>
 
         <script src="assets/js/console.js"></script>
 
