Added hints for levels.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         <canvas id="playcanvas" width="960" height="320">
         </canvas>
-        <p class="help">A játékos léptetéséhez add ki a <code>Player.walk();</code> utasítást.</p>
+        <p class="help" id="hint"></p>
         <div id="console-log-div"></div>
         <textarea id="code"></textarea>
         <button onclick="parse($('#code').val())" class="btn">RUN</button>
