--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="models/player.js"></script>
     <script src="models/enemy.js"></script>
     <script src="models/ruby.js"></script>
+    <script src="models/gate.js"></script>
     <script src="models/map.js"></script>
     <script src="views/display.js"></script>
     <link rel="stylesheet" href="assets/css/main.css">
