Implement simple level change

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <textarea id="code"></textarea>
         <button onclick="parse($('#code').val())" class="btn">RUN</button>
         <button onclick="restart()" class="btn">RESTART</button>
+        <button onclick="changeLevel()" class="btn">Change level</button>
 
         <script src="assets/js/console.js"></script>
 
