--- a/index.html
+++ b/index.html
@@ -1,115 +1,102 @@
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
     <title>Fontero</title>
     <meta charset="utf-8">
+    <script src="assets/js/uikit.min.js"></script>
     <script src="assets/js/jquery-3.2.1.min.js"></script>
-    <link rel="stylesheet" href="assets/css/main.css">
-</head>
-<body>
 
-<div class="container">
-    <script>
-        $(document).ready(function () {
-            $('.skin').click(function () {
-                var skin = $(this).data('skin');
-                $("a").each(function (index) {
-                    $(this).attr('href', $(this).attr('href').replace(/\&.*$/, "") + "&skin=" + skin);
-                });
-                $('.skin').removeClass('active');
-                $(this).addClass('active');
-            });
-        });
-    </script>
-    <h1 align="center">Fontero - Kir-Dev</h1>
+    <link rel="stylesheet" href="assets/css/uikit.min.css">
+    <link rel="stylesheet" href="assets/css/main.css">
+  </head>
+  <body class="uk-width-1-1 uk-height-1-1 uk-text-center">
+    <h1 class="uk-heading-primary">Fontero - Kir-Dev</h1>
     <h2>Válassz karaktert!</h2>
-    <div>
-        <div class="skin pull-left active" data-skin="pirate">
-            <img src="assets/images/pirate/character.svg" alt="pirate">
+
+    <div class="uk-child-width-1-3@s uk-width-1-1 uk-grid-medium uk-padding-small uk-margin-remove" uk-grid>
+      <div class="uk-padding-small">
+        <div class="skin uk-padding-remove uk-card uk-card-default uk-card-body active" data-skin="pirate">
+          <img class="character-image" src="assets/images/pirate/character.svg" alt="pirate">
         </div>
-        <div class="skin pull-left" data-skin="mummy">
-            <img src="assets/images/mummy/character.svg" alt="mummy">
+      </div>
+      <div class="uk-padding-small">
+        <div class="skin uk-padding-remove uk-card uk-card-default uk-card-body" data-skin="mummy">
+          <img class="character-image" src="assets/images/mummy/character.svg" alt="mummy">
         </div>
-        <div class="skin pull-left" data-skin="wildwest">
-            <img src="assets/images/wildwest/character.svg" alt="wildwest">
+      </div>
+      <div class="uk-padding-small">
+        <div class="skin uk-padding-remove uk-card uk-card-default uk-card-body" data-skin="wildwest">
+          <img class="character-image" src="assets/images/wildwest/character.svg" alt="wildwest">
         </div>
-        <div style="clear:both; height: 0px;">&nbsp;</div>
+      </div>
     </div>
+
 
     <h2>Válassz szintet!</h2>
-    <div class="level">
-        <a href="game.html?level=1&skin=pirate">
-        <div class="pull-left">
-            <img src="assets/levels/1/cover.png">
-        </div>
-        <div class="pull-left description">
-            <h2>Level 1</h2>
-            <blockquote>
-                "Csak így tanulsz meg a magad lábán járni, és pontosan rájössz majd, hogy mit lehet és mit szabad."
-                <br>
-                <small class="pull-right">Fekete István</small>
-            </blockquote>
-        </div>
-        <div style="clear:both; height: 0px;">&nbsp;</div>
-        </a>
-    </div>
-    <div class="level">
-        <a href="game.html?level=2&skin=pirate">
-        <div class="pull-left">
-            <img src="assets/levels/2/cover.png">
-        </div>
-        <div class="pull-left description">
-            <h2>Level 2</h2>
-        </div>
-        <div style="clear:both; height: 0px;">&nbsp;</div>
-        </a>
-    </div>
-    <div class="level">
-        <a href="game.html?level=3&skin=pirate">
-        <div class="pull-left">
-            <img src="assets/levels/3/cover.png">
-        </div>
-        <div class="pull-left description">
-            <h2>Level 3</h2>
-        </div>
-            <div style="clear:both; height: 0px;">&nbsp;</div>
-        </a>
-    </div>
-    <div class="level">
-        <a href="game.html?level=4&skin=pirate">
-            <div class="pull-left">
-                <img src="assets/levels/4/cover.png">
-            </div>
-            <div class="pull-left description">
-                <h2>Level 4</h2>
-            </div>
-            <div style="clear:both; height: 0px;">&nbsp;</div>
-        </a>
-    </div>
-    <div class="level">
-        <a href="game.html?level=5&skin=pirate">
-        <div class="pull-left">
-            <img src="http://placehold.it/948x156?text=?">
-        </div>
-        <div class="pull-left description">
-            <h2>Level 5</h2>
-        </div>
-        <div style="clear:both; height: 0px;">&nbsp;</div>
-        </a>
-    </div>
-    <div class="level">
-        <a href="game.html?level=6&skin=pirate">
-        <div class="pull-left">
-            <img src="http://placehold.it/948x156?text=?">
-        </div>
-        <div class="pull-left description">
-            <h2>Level 6</h2>
-        </div>
-        <div style="clear:both; height: 0px;">&nbsp;</div>
-        </a>
-    </div>
-</div>
 
+    <div class="uk-child-width-1-2@m uk-child-width-1-1 uk-grid-medium uk-padding-small uk-padding-remove-vertical uk-grid-match uk-margin-large-bottom" uk-grid>
+      <a href="game.html?level=1&skin=pirate">
+        <div class="level uk-padding-remove uk-card uk-card-default uk-card-body uk-active">
+          <img src="assets/levels/1/cover.png">
+          <blockquote>
+            "Csak így tanulsz meg a magad lábán járni, és pontosan rájössz majd, hogy mit lehet és mit szabad."
+            <br>
+            <small class="uk-align-right uk-margin-right uk-margin-remove-bottom">Fekete István</small>
+          </blockquote>
+          <h3 class="uk-width-1-1">Level1</h3>
+        </div>
+      </a>
 
-</body>
+      <a href="game.html?level=2&skin=pirate">
+        <div class="level uk-padding-remove uk-card uk-card-default uk-card-body uk-active">
+          <img src="assets/levels/2/cover.png">
+          <blockquote>
+            ""
+            <br>
+            <small class="uk-align-right uk-margin-right uk-margin-remove-bottom"></small>
+          </blockquote>
+          <h3 class="uk-width-1-1">Level 2</h3>
+        </div>
+      </a>
+
+      <a href="game.html?level=3&skin=pirate">
+        <div class="level uk-padding-remove uk-card uk-card-default uk-card-body uk-active">
+          <img src="assets/levels/3/cover.png">
+          <blockquote>
+            ""
+            <br>
+            <small class="uk-align-right uk-margin-right uk-margin-remove-bottom"></small>
+          </blockquote>
+          <h3 class="uk-width-1-1">Level 3</h3>
+        </div>
+      </a>
+
+      <a href="game.html?level=4&skin=pirate">
+        <div class="level uk-padding-remove uk-card uk-card-default uk-card-body uk-active">
+          <img src="assets/levels/4/cover.png">
+          <blockquote>
+            ""
+            <br>
+            <small class="uk-align-right uk-margin-right uk-margin-remove-bottom"></small>
+          </blockquote>
+          <h3 class="uk-width-1-1">Level 4</h3>
+        </div>
+      </a>
+
+    </div>
+
+    <script>
+    $(document).ready(function () {
+      $('.skin').click(function () {
+        var skin = $(this).data('skin');
+        $("a").each(function (index) {
+          $(this).attr('href', $(this).attr('href').replace(/\&.*$/, "") + "&skin=" + skin);
+        });
+        $('.skin').removeClass('active');
+        $(this).addClass('active');
+      });
+    });
+    </script>
+
+  </body>
 </html>
