Add Syntax highlighting
Add Syntax highlighting using CodeMirror, http://codemirror.net

--- a/game.html
+++ b/game.html
@@ -16,6 +16,8 @@
 
     <link rel="stylesheet" href="assets/css/uikit.min.css">
     <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="stylesheet" href="/node_modules/codemirror/lib/codemirror.css">
+    <link rel="stylesheet" href="/node_modules/codemirror/theme/solarized.css">
   </head>
 
   <body class="uk-background">
@@ -37,7 +39,7 @@
             <button onclick="changeLevel()" class="uk-button uk-width-1-2 uk-text-center uk-padding-remove">Level</button>
             <button onclick="showPopup()" class="uk-button uk-width-1-2 uk-padding-remove" type="button" uk-toggle="target: #modal-hint">Hint</button>
             <button onclick="restart()" class="uk-width-1-1 uk-button uk-text-center uk-padding-remove">Restart</button>
-            <button onclick="parse($('#code').val())" class="uk-button uk-button-danger uk-width-1-1 uk-padding-remove">RUN</button>
+            <button onclick="cm.save();parse($('#code').val())" class="uk-button uk-button-danger uk-width-1-1 uk-padding-remove">RUN</button>
 
         </div>
       </div>
@@ -48,6 +50,20 @@
   </div>
 
   <script src="control/main.js"></script>
+  <script src="node_modules/codemirror/lib/codemirror.js"></script>
+  <script src="node_modules/codemirror/mode/javascript/javascript.js"></script>
+  <script>
+    var cm = CodeMirror.fromTextArea(code, {
+      mode:  "javascript",
+      lineNumbers: true,
+      theme: "solarized light",
+      autofocus: true
+    });
+
+    //$(".CodeMirror").css("width", "600px")
+    $("[role=presentation]").css("text-align", "initial")
+    $(".CodeMirror").addClass("uk-width-2-3 uk-padding-remove uk-margin-remove")
+  </script>
   <div id="modal-hint" uk-modal>
     <div class="modal uk-modal-dialog uk-modal-body">
       <h2 class="uk-modal-title">Hint</h2>
