--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <h1 class="uk-heading-primary">Fontero - Kir-Dev</h1>
     <h2>Válassz karaktert!</h2>
 
-    <div class="uk-child-width-1-3@s uk-width-1-1 uk-grid-medium uk-padding-small uk-margin-remove" uk-grid>
+    <div class="uk-child-width-1-5@s uk-width-1-1 uk-grid-medium uk-padding-small uk-margin-remove" uk-grid>
       <div class="uk-padding-small">
-        <div class="skin uk-padding-remove uk-card uk-card-default uk-card-body active" data-skin="pirate">
-          <img class="character-image" src="assets/images/pirate/character.svg" alt="pirate">
+        <div class="skin uk-padding-remove uk-card uk-card-default uk-card-body" data-skin="caveman">
+          <img class="character-image" src="assets/images/caveman/character.svg" alt="caveman">
         </div>
       </div>
       <div class="uk-padding-small">
@@ -25,8 +25,18 @@
         </div>
       </div>
       <div class="uk-padding-small">
+        <div class="skin uk-padding-remove uk-card uk-card-default uk-card-body active" data-skin="pirate">
+          <img class="character-image" src="assets/images/pirate/character.svg" alt="pirate">
+        </div>
+      </div>
+      <div class="uk-padding-small">
         <div class="skin uk-padding-remove uk-card uk-card-default uk-card-body" data-skin="wildwest">
           <img class="character-image" src="assets/images/wildwest/character.svg" alt="wildwest">
+        </div>
+      </div>
+      <div class="uk-padding-small">
+        <div class="skin uk-padding-remove uk-card uk-card-default uk-card-body" data-skin="samurai">
+          <img class="character-image" src="assets/images/samurai/character.svg" alt="samurai">
         </div>
       </div>
     </div>
