Set caveman to default skin

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <div class="uk-child-width-1-5@s uk-width-1-1 uk-grid-medium uk-padding-small uk-margin-remove" uk-grid>
       <div class="uk-padding-small">
-        <div class="skin uk-padding-remove uk-card uk-card-default uk-card-body" data-skin="caveman">
+        <div class="skin uk-padding-remove uk-card uk-card-default uk-card-body active" data-skin="caveman">
           <img class="character-image" src="assets/images/caveman/character.svg" alt="caveman">
         </div>
       </div>
@@ -25,7 +25,7 @@
         </div>
       </div>
       <div class="uk-padding-small">
-        <div class="skin uk-padding-remove uk-card uk-card-default uk-card-body active" data-skin="pirate">
+        <div class="skin uk-padding-remove uk-card uk-card-default uk-card-body" data-skin="pirate">
           <img class="character-image" src="assets/images/pirate/character.svg" alt="pirate">
         </div>
       </div>
