--- a/index.html
+++ b/index.html
@@ -13,68 +13,30 @@
     <h1 class="uk-heading-primary">Fontero - Kir-Dev</h1>
     <h2>Válassz karaktert!</h2>
 
-    <div
-      class="uk-child-width-1-5@s uk-width-1-1 uk-grid-medium uk-padding-small uk-margin-remove"
-      uk-grid
-    >
+    <div class="uk-child-width-1-5@s uk-width-1-1 uk-grid-medium uk-padding-small uk-margin-remove" uk-grid>
       <div class="uk-padding-small">
-        <div
-          class="skin uk-padding-remove uk-card uk-card-default uk-card-body active"
-          data-skin="caveman"
-        >
-          <img
-            class="character-image"
-            src="assets/images/caveman/character.svg"
-            alt="caveman"
-          />
+        <div class="skin uk-padding-remove uk-card uk-card-default uk-card-body active" data-skin="caveman">
+          <img class="character-image" src="assets/images/caveman/character.svg" alt="caveman" />
         </div>
       </div>
       <div class="uk-padding-small">
-        <div
-          class="skin uk-padding-remove uk-card uk-card-default uk-card-body"
-          data-skin="mummy"
-        >
-          <img
-            class="character-image"
-            src="assets/images/mummy/character.svg"
-            alt="mummy"
-          />
+        <div class="skin uk-padding-remove uk-card uk-card-default uk-card-body" data-skin="mummy">
+          <img class="character-image" src="assets/images/mummy/character.svg" alt="mummy" />
         </div>
       </div>
       <div class="uk-padding-small">
-        <div
-          class="skin uk-padding-remove uk-card uk-card-default uk-card-body"
-          data-skin="pirate"
-        >
-          <img
-            class="character-image"
-            src="assets/images/pirate/character.svg"
-            alt="pirate"
-          />
+        <div class="skin uk-padding-remove uk-card uk-card-default uk-card-body" data-skin="pirate">
+          <img class="character-image" src="assets/images/pirate/character.svg" alt="pirate" />
         </div>
       </div>
       <div class="uk-padding-small">
-        <div
-          class="skin uk-padding-remove uk-card uk-card-default uk-card-body"
-          data-skin="wildwest"
-        >
-          <img
-            class="character-image"
-            src="assets/images/wildwest/character.svg"
-            alt="wildwest"
-          />
+        <div class="skin uk-padding-remove uk-card uk-card-default uk-card-body" data-skin="wildwest">
+          <img class="character-image" src="assets/images/wildwest/character.svg" alt="wildwest" />
         </div>
       </div>
       <div class="uk-padding-small">
-        <div
-          class="skin uk-padding-remove uk-card uk-card-default uk-card-body"
-          data-skin="samurai"
-        >
-          <img
-            class="character-image"
-            src="assets/images/samurai/character.svg"
-            alt="samurai"
-          />
+        <div class="skin uk-padding-remove uk-card uk-card-default uk-card-body" data-skin="samurai">
+          <img class="character-image" src="assets/images/samurai/character.svg" alt="samurai" />
         </div>
       </div>
     </div>
@@ -86,66 +48,48 @@
       uk-grid
     >
       <a href="game.html?level=1&skin=pirate">
-        <div
-          class="level uk-padding-remove uk-card uk-card-default uk-card-body uk-active"
-        >
+        <div class="level uk-padding-remove uk-card uk-card-default uk-card-body uk-active">
           <img src="assets/levels/1/cover.png" />
           <blockquote>
-            "Csak így tanulsz meg a magad lábán járni, és pontosan rájössz majd,
-            hogy mit lehet és mit szabad."
+            "Csak így tanulsz meg a magad lábán járni, és pontosan rájössz majd, hogy mit lehet és mit szabad."
             <br />
-            <small
-              class="uk-align-right uk-margin-right uk-margin-remove-bottom"
-              >Fekete István</small
-            >
+            <small class="uk-align-right uk-margin-right uk-margin-remove-bottom">Fekete István</small>
           </blockquote>
           <h3 class="uk-width-1-1">Level1</h3>
         </div>
       </a>
 
       <a href="game.html?level=2&skin=pirate">
-        <div
-          class="level uk-padding-remove uk-card uk-card-default uk-card-body uk-active"
-        >
+        <div class="level uk-padding-remove uk-card uk-card-default uk-card-body uk-active">
           <img src="assets/levels/2/cover.png" />
           <blockquote>
             ""
             <br />
-            <small
-              class="uk-align-right uk-margin-right uk-margin-remove-bottom"
-            ></small>
+            <small class="uk-align-right uk-margin-right uk-margin-remove-bottom"></small>
           </blockquote>
           <h3 class="uk-width-1-1">Level 2</h3>
         </div>
       </a>
 
       <a href="game.html?level=3&skin=pirate">
-        <div
-          class="level uk-padding-remove uk-card uk-card-default uk-card-body uk-active"
-        >
+        <div class="level uk-padding-remove uk-card uk-card-default uk-card-body uk-active">
           <img src="assets/levels/3/cover.png" />
           <blockquote>
             ""
             <br />
-            <small
-              class="uk-align-right uk-margin-right uk-margin-remove-bottom"
-            ></small>
+            <small class="uk-align-right uk-margin-right uk-margin-remove-bottom"></small>
           </blockquote>
           <h3 class="uk-width-1-1">Level 3</h3>
         </div>
       </a>
 
       <a href="game.html?level=4&skin=pirate">
-        <div
-          class="level uk-padding-remove uk-card uk-card-default uk-card-body uk-active"
-        >
+        <div class="level uk-padding-remove uk-card uk-card-default uk-card-body uk-active">
           <img src="assets/levels/4/cover.png" />
           <blockquote>
             ""
             <br />
-            <small
-              class="uk-align-right uk-margin-right uk-margin-remove-bottom"
-            ></small>
+            <small class="uk-align-right uk-margin-right uk-margin-remove-bottom"></small>
           </blockquote>
           <h3 class="uk-width-1-1">Level 4</h3>
         </div>
@@ -153,23 +97,16 @@
     </div>
 
     <script>
-      $(document).ready(function() {
-        $(".skin").click(function() {
-          var skin = $(this).data("skin");
-          $("a").each(function(index) {
-            $(this).attr(
-              "href",
-              $(this)
-                .attr("href")
-                .replace(/\&.*$/, "") +
-                "&skin=" +
-                skin
-            );
-          });
-          $(".skin").removeClass("active");
-          $(this).addClass("active");
-        });
-      });
+      $(document).ready(function () {
+        $('.skin').click(function () {
+          var skin = $(this).data('skin')
+          $('a').each(function (index) {
+            $(this).attr('href', $(this).attr('href').replace(/\&.*$/, '') + '&skin=' + skin)
+          })
+          $('.skin').removeClass('active')
+          $(this).addClass('active')
+        })
+      })
     </script>
   </body>
 </html>
